tests/ui/conditional-compilation/cfg-attr-syntax-validation.stderr
error[E0539]: malformed `cfg` attribute input
  --> $DIR/cfg-attr-syntax-validation.rs:1:1
   |
LL | #[cfg]
   | ^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[cfg(predicate)]`

error[E0539]: malformed `cfg` attribute input
  --> $DIR/cfg-attr-syntax-validation.rs:6:1
   |
LL | #[cfg = 10]
   | ^^^^^^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[cfg(predicate)]`

error[E0805]: malformed `cfg` attribute input
  --> $DIR/cfg-attr-syntax-validation.rs:11:1
   |
LL | #[cfg()]
   | ^^^^^--^
   | |    |
   | |    expected a single argument here
   | help: must be of the form: `#[cfg(predicate)]`

error[E0805]: malformed `cfg` attribute input
  --> $DIR/cfg-attr-syntax-validation.rs:16:1
   |
LL | #[cfg(a, b)]
   | ^^^^^------^
   | |    |
   | |    expected a single argument here
   | help: must be of the form: `#[cfg(predicate)]`

error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-attr-syntax-validation.rs:21:7
   |
LL | #[cfg("str")]
   |       ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-attr-syntax-validation.rs:24:7
   |
LL | #[cfg(a::b)]
   |       ^^^^

error[E0537]: invalid predicate `a`
  --> $DIR/cfg-attr-syntax-validation.rs:27:7
   |
LL | #[cfg(a())]
   |       ^^^

error[E0539]: malformed `cfg` attribute input
  --> $DIR/cfg-attr-syntax-validation.rs:30:1
   |
LL | #[cfg(a = 10)]
   | ^^^^^^^^^^--^^
   | |         |
   | |         expected a string literal here
   | help: must be of the form: `#[cfg(predicate)]`

error[E0539]: malformed `cfg` attribute input
  --> $DIR/cfg-attr-syntax-validation.rs:34:1
   |
LL | #[cfg(a = b"hi")]
   | ^^^^^^^^^^-^^^^^^
   |           |
   |           help: consider removing the prefix
   |
   = note: expected a normal string literal, not a byte string literal

error: expected unsuffixed literal, found `expr` metavariable
  --> $DIR/cfg-attr-syntax-validation.rs:40:25
   |
LL |         #[cfg(feature = $expr)]
   |                         ^^^^^
...
LL | generate_s10!(concat!("nonexistent"));
   | ------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `generate_s10` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0537, E0539, E0805.
For more information about an error, try `rustc --explain E0537`.
